docs: fix broken style on homepage
due to change in resets

--- a/src/_sass/home.scss
+++ b/src/_sass/home.scss
@@ -397,6 +397,10 @@ $Home-feature-navList-width: 35%;
   }
 }
 
+.Home-features-navItem + .Home-features-navItem {
+  margin-top: $spacing-unit * .25;
+}
+
 .Home-features-navItem-description {
   transition: height $anim-duration ease;
   z-index: 1;
